deployment/voting-api.yml
apiVersion: v1
kind: Namespace
metadata:
   name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-api
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-api
  template:
    metadata:
      labels:
        app: voting-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: voting-api
        image: ${IMAGE_ID}
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: voting-api
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voting-api
