deployment/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting
  namespace: ${NAMESPACE}
  labels:
    name: voting
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: ${NAMESPACE}.${DOMAIN}
    http:
      paths:
      - backend:
          serviceName: voting-app
          servicePort: 80
        path: /
      - backend:
          serviceName: voting-api
          servicePort: 80
        path: /api
