deployment/voting-app.yml
apiVersion: v1
kind: Namespace
metadata:
   name: ${NAMESPACE}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      containers:
      - name: voting-app
        image: ${IMAGE_ID}
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: voting-app
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: voting-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: voting-app
  namespace: ${NAMESPACE}
  labels:
    name: voting-app
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: ${NAMESPACE}.${DOMAIN}
    http:
      paths:
      - backend:
          serviceName: voting-app
          servicePort: 80
        path: /
